--- a/2_Indicators.Rmd
+++ b/2_Indicators.Rmd
@@ -27,6 +27,7 @@ pacman::p_load(fredr,
                data.table,
                pROC,
                progress,
+               quantmod,
                rvest,
                ggrepel)
 source(file = "money_theme.R")
@@ -56,7 +57,7 @@ add_fomc_meeting_dates = function() {
 ```
 
 
-```{r}
+```{r eval=F}
 
 
 fredr::fredr_releases_dates(realtime_start = Sys.Date(),
@@ -75,14 +76,14 @@ fredr::fredr_releases_dates(realtime_start = Sys.Date(),
 ```
 
 
-```{r}
+```{r eval=F}
 
 fredr::fredr_tags_series(tag_names = "nsa",order_by = "popularity",sort_order = "desc")
 
 ```
 
 
-```{r}
+```{r eval=F}
 
 df_NASDAQCOM = fredr::fredr_series_observations(series_id = "NASDAQCOM") %>% 
   dplyr::select(date,value)
@@ -121,10 +122,10 @@ df_NASDAQCOM %>%
   geom_smooth(method="lm")
 ```
 
-
+### FRED Data
 
 ```{r}
-series_ids = c("CBBTCUSD",
+series_ids = unique(c("CBBTCUSD",
                "NASDAQCOM",
                "T10Y2Y",
                "T5YIFR",
@@ -172,7 +173,8 @@ series_ids = c("CBBTCUSD",
                "GDPC1",
                "DFII10",
                "TDSP",
-               "MSPUS")
+               "WALCL",
+               "MSPUS"))
 
 df_series = rbindlist(lapply(series_ids,function(series_id) {
   fredr::fredr_series_observations(series_id = series_id) %>% 
@@ -182,7 +184,42 @@ df_series = rbindlist(lapply(series_ids,function(series_id) {
     tidyr::fill(value,.direction = "down")  %>% 
     tidyr::fill(series_id,.direction = "down") 
 }))
+```
 
+### Yahoo Data
+
+```{r}
+series_ids_yahoo = unique(c("AAPL","JNJ","MSFT"))
+
+df_yahoo = rbindlist(lapply(series_ids_yahoo,function(ticker) {
+      temp_df = getSymbols(ticker, env = NULL) %>% 
+      as.data.frame(.) %>% 
+      dplyr::mutate(Date=row.names(.)) %>% 
+      dplyr::mutate(Date=gsub("X","",Date)) %>% 
+      dplyr::mutate(Date=ymd(Date)) %>% 
+      dplyr::select(c(7,1)) %>% 
+      setNames(.,c("date","value")) %>% 
+      dplyr::mutate(series_id=ticker) %>% 
+      tidyr::complete(date=seq.Date(from=min(date,na.rm=T),to=Sys.Date(),by="1 day")) %>% 
+      tidyr::fill(value,.direction = "down")  %>% 
+      tidyr::fill(series_id,.direction = "down") 
+      
+      row.names(temp_df) = NULL
+      return( temp_df )
+}))
+```
+
+
+
+### Combinations
+
+```{r}
+df_series = bind_rows( df_series , df_yahoo )
+series_ids = unique(df_series$series_id)
+```
+
+
+```{r}
 combinations = data.frame(t(combn(series_ids,2)))
 combinations = expand.grid(x1=series_ids,
             x2=series_ids) %>% 
@@ -190,6 +227,7 @@ combinations = expand.grid(x1=series_ids,
 combinations.list <- split(combinations, seq(nrow(combinations)))
 
 ```
+
 
 
 # Cross correlations
