--- a/2_Indicators.Rmd
+++ b/2_Indicators.Rmd
@@ -270,7 +270,7 @@ ccf_results = ccf(df_ccf$One,df_ccf$Two,lag.max = 3650)
 best_corr_index = which(abs(ccf_results$acf)==max(abs(ccf_results$acf)))
 best_corr_time = ccf_results$lag[best_corr_index]
 best_corr_value = ccf_results$acf[best_corr_index]
-best_corr
+
 ```
 
 ```{r}
@@ -299,173 +299,11 @@ ccf_results = ccf(df_ccf$One,df_ccf$Two,lag.max = 3650)
 best_corr_index = which(abs(ccf_results$acf)==max(abs(ccf_results$acf)))
 best_corr_time = ccf_results$lag[best_corr_index]
 best_corr_value = ccf_results$acf[best_corr_index]
-best_corr
-```
-
-# Manual correlation
-
-```{r}
-
-# All
-df_correlations = rbindlist(apply(combinations,1,function(series) {
-    tryCatch(expr = {
-      x = series[[1]]
-      y = series[[2]]
-      values_x = df_series[which(df_series$series_id==x),]
-      values_y = df_series[which(df_series$series_id==y),]
-      temp_df = values_x %>% 
-        left_join(values_y,by=c("date")) %>% 
-        fill(c(value.x,value.y),.direction = "downup")
-      cor_= cor(x = temp_df$value.x,y = temp_df$value.y,use = "complete.obs")
-      data.frame(X1=x,X2=y,correlation=cor_)
-  },error=function(e) { data.frame()})
-}))
-
-df_correlations
-```
-
-
-```{r}
-# Time-dependent
-df_correlations_timeadjusted = rbindlist(apply(combinations,1,function(series) {
-  tryCatch(expr = {
-      x = series[[1]]
-      y = series[[2]]
-      # message(paste0(x,"-",y))
-      values_x = df_series[which(df_series$series_id==x),]
-      values_y = df_series[which(df_series$series_id==y),]
-      
-      df_cor = rbindlist(lapply(seq(-3*365,3*365,by=10),function(day) {
-            temp_df = values_x %>% 
-                    dplyr::mutate(join_date=date+days(day)) %>% 
-                    left_join(values_y,by=c("join_date"="date")) %>% 
-                    fill(c(value.x,value.y),.direction = "downup")
-            data.frame(day=day,
-                       cor=cor(x=temp_df$value.x,
-                               y=temp_df$value.y,
-                               use = "complete.obs"))
-          
-        }))
-      
-      min_ = which(df_cor$cor==min(df_cor$cor))
-      max_ = which(df_cor$cor==max(df_cor$cor))
-      
-      data.frame(X1=x,X2=y,
-                 min=min_,min_cor=df_cor[min_]$cor,
-                 max=max_,max_cor=df_cor[max_]$cor)
-  },error=function(e) { data.frame()})
-}))
-
-df_correlations_timeadjusted
-```
-
-```{r}
-## Draw plot
-
-x1 = "NASDAQCOM"
-x2 = "DFII10"
-days = 97
-
-# message(paste0(x,"-",y))
-values_x = df_series[which(df_series$series_id==x1),]
-values_y = df_series[which(df_series$series_id==x2),]
-
-# Facetted
-df_series %>% 
-  filter(series_id %in% c(x1,x2)) %>% 
-  group_by(series_id) %>%
-  # dplyr::mutate(value=scale(value)) %>%
-  # dplyr::mutate(value=scales::rescale(value,to = c(0,100))) %>% 
-  # ungroup() %>%
-  ggplot(.,aes(x=date,y=value,color=series_id)) +
-  geom_line() +
-  facet_wrap(~series_id,ncol=1,scales="free")
-
-
-temp_df = values_x %>% 
-        dplyr::mutate(join_date=date+days(days)) %>% 
-        left_join(values_y,by=c("join_date"="date")) %>% 
-        fill(c(value.x,value.y),.direction = "downup")
-
-temp_df %>% 
-  ggplot(.,aes(x=value.x,y=value.y)) +
-  geom_point() +
-  geom_smooth(method="lm")
-          
-
-```
-
-
-
-# FED
-
-```{r }
-readRenviron(path = "Renviron.site")
-fredr::fredr_set_key(key = Sys.getenv("FRED_API"))
-
-```
-
-```{r }
-
-df_yieldcurve = 
-  fredr(series_id = "DGS1") %>% 
-  bind_rows(fredr(series_id = "DGS2")) %>% 
-  bind_rows(fredr(series_id = "DGS3")) %>% 
-  bind_rows(fredr(series_id = "DGS5")) %>% 
-  bind_rows(fredr(series_id = "DGS7")) %>% 
-  bind_rows(fredr(series_id = "DGS10")) %>% 
-  bind_rows(fredr(series_id = "DGS20")) %>% 
-  bind_rows(fredr(series_id = "DGS30")) %>% 
-  bind_rows(fredr(series_id = "DGS1MO")) %>% 
-  bind_rows(fredr(series_id = "DGS3MO")) %>% 
-  bind_rows(fredr(series_id = "DGS6MO")) %>% 
-  bind_rows(fredr(series_id = "DFF")) %>% 
-  bind_rows(fredr(series_id = "MORTGAGE30US")) %>% 
-  bind_rows(fredr(series_id = "WILL5000INDFC")) %>% 
-  bind_rows(fredr(series_id = "DCOILWTICO")) %>% 
-  bind_rows(fredr(series_id = "SP500")) %>% 
-  bind_rows(fredr(series_id = "T10Y2Y")) %>% 
-  bind_rows(fredr(series_id = "T10YIE")) %>% 
-  bind_rows(fredr(series_id = "DTWEXBGS")) %>% 
-  bind_rows(fredr(series_id = "DHHNGSP")) %>% 
-  
-  bind_rows(fredr(series_id = "MSPUS")) %>% 
-  bind_rows(fredr(series_id = "CSUSHPINSA")) %>% 
-  bind_rows(fredr(series_id = "UNRATE")) %>% 
-  bind_rows(fredr(series_id = "M2SL")) %>% 
-  bind_rows(fredr(series_id = "CPIAUCSL")) %>% 
-  bind_rows(fredr(series_id = "BAMLH0A0HYM2")) %>% 
-  bind_rows(fredr(series_id = "CIVPART")) %>% 
-  bind_rows(fredr(series_id = "PCE")) %>% 
-  bind_rows(fredr(series_id = "MSACSR")) %>% 
-  bind_rows(fredr(series_id = "PSAVERT")) %>% 
-  bind_rows(fredr(series_id = "AAA")) %>% 
-  # bind_rows(fredr(series_id = "AAA")) %>% 
-  # bind_rows(fredr(series_id = "AAA")) %>% 
-  # bind_rows(fredr(series_id = "AAA")) %>% 
-  # bind_rows(fredr(series_id = "AAA")) %>% 
-  # bind_rows(fredr(series_id = "AAA")) %>% 
-  
-  
-  group_by(series_id) %>% 
-  tidyr::complete(date=seq.Date(from = min(date), to = max(date), by = "1 day")) %>% 
-  arrange(series_id,date) %>% 
-  tidyr::fill(value,.direction = "downup") %>% 
-  ungroup() %>% 
-  na.omit() %>% 
-  dplyr::select(date,series_id,value)
-
-df_combinations = expand.grid(series_id=unique(df_yieldcurve$series_id),
-            joined_series_id=unique(df_yieldcurve$series_id)) %>% 
-  filter(!series_id==joined_series_id)
-# unique(df_yieldcurve$series_id)
-# df_combinations = data.frame(t(combn(unique(df_yieldcurve$series_id),2))) %>% 
-#   setNames(.,c("series_id","joined_series_id"))
 ```
 
 # LM Regression
 
-```{r}
+```{r eval=F}
 
 calc_rsq = function(data) {
   return( data.frame(rsq=summary( lm(value.x~value.y,data=data) )$r.squared) )
@@ -499,7 +337,7 @@ df_kappa_2 = df_kappa %>%
 
 ```
 
-```{r}
+```{r eval=F}
 
 indicator = "WILL5000INDFC"
 
@@ -519,7 +357,7 @@ tmp_current %>%
 
 ```
 
-```{r}
+```{r eval=F}
 
 df_example = df_combinations %>% 
   filter(series_id=="WILL5000INDFC") %>% 
@@ -533,7 +371,7 @@ df_example = df_combinations %>%
 
 ```
 
-```{r}
+```{r eval=F}
 
 calc_cor = function(data) {
   return( data.frame(cor=cor(x = data$value.x, y = data$value.y) ) )
@@ -569,7 +407,7 @@ df_kappa = df_kappa %>%
 
 # Example
 
-```{r}
+```{r eval=F}
 
 
 
@@ -640,7 +478,7 @@ tmp_lagging %>%
   theme(legend.position="null")
 ```
 
-```{r}
+```{r eval=F}
 
 series1 = "WILL5000INDFC"
 series2 = "CPIAUCSL"
@@ -674,7 +512,7 @@ tmp %>%
 
 # Current Indicator
 
-```{r}
+```{r eval=F}
 
 series1 = "SP500"
 time_diff = 0
@@ -695,7 +533,7 @@ summary(lm_aic)
 
 ```
 
-```{r}
+```{r eval=F}
 
 # Current
 predict(lm_aic,
@@ -727,217 +565,4 @@ predict(lm_aic,
                    T10Y2Y=-0.75
   ),interval="prediction")
 ```
-
-# Recession Prediction
-
-```{r }
-readRenviron(path = "Renviron.site")
-fredr::fredr_set_key(key = Sys.getenv("FRED_API"))
-```
-
-
-```{r }
-dates = data.frame(date=seq.Date(from = ymd("1960-01-01"),to = ymd("2022-02-01"),by="1 day"))
-```
-
-```{r}
-recession_bool = fredr::fredr("USREC") %>% 
-  filter(value==1) %>% 
-  dplyr::select(date) %>% 
-  dplyr::mutate(Recession=factor("Yes",levels=c("No","Yes")))
-```
-
-
-## Recession Next 6 Months
-
-```{r}
-# Skeleton
-recession_next_six_months = fredr::fredr("USREC") %>% 
-  filter(value==1) %>% 
-  dplyr::select(date) %>% 
-  dplyr::mutate(minus1mo=date-months(1),
-                minus2mo=date-months(2),
-                minus3mo=date-months(3),
-                minus4mo=date-months(4),
-                minus5mo=date-months(5),
-                minus6mo=date-months(6)) %>% 
-  gather(date_type,date_val,minus1mo:minus6mo) %>% 
-  dplyr::mutate(Recession=factor("Yes",levels=c("No","Yes"))) %>% 
-  dplyr::select(date_val,Recession) %>% 
-  distinct()
-recession_next_six_months = dates %>% 
-  left_join(recession_next_six_months,by=c("date"="date_val")) %>% 
-  dplyr::mutate(Recession=replace_na(Recession,"No"))
-
-# Data frame with predictors
-df_yieldcurve = 
-  fredr(series_id = "DGS1") %>% 
-  bind_rows(fredr(series_id = "DGS2")) %>% 
-  bind_rows(fredr(series_id = "DGS3")) %>% 
-  bind_rows(fredr(series_id = "DGS5")) %>% 
-  bind_rows(fredr(series_id = "DGS7")) %>% 
-  bind_rows(fredr(series_id = "DGS10")) %>% 
-  bind_rows(fredr(series_id = "DGS20")) %>% 
-  bind_rows(fredr(series_id = "DGS30")) %>% 
-  bind_rows(fredr(series_id = "DGS1MO")) %>% 
-  bind_rows(fredr(series_id = "DGS3MO")) %>% 
-  bind_rows(fredr(series_id = "DGS6MO")) %>% 
-  bind_rows(fredr(series_id = "DFF")) %>% 
-  bind_rows(fredr(series_id = "MORTGAGE30US")) %>% 
-  dplyr::select(-realtime_start,
-                -realtime_end)
-
-df_checkboard = expand.grid(date=seq.Date(from = min(df_yieldcurve$date),to = ymd("2022-02-01"),by="1 day"),
-                            series_id=unique(df_yieldcurve$series_id),
-                            joined_series=unique(df_yieldcurve$series_id))
-
-df_yieldcurve_predictors = df_checkboard %>% 
-  left_join(df_yieldcurve) %>% 
-  left_join(df_yieldcurve,by=c("joined_series"="series_id","date"="date")) %>% 
-  filter(series_id != joined_series) %>% 
-  tidyr::fill(value.x,.direction="updown") %>% 
-  tidyr::fill(value.y,.direction="updown") %>% 
-  dplyr::mutate(spread=value.x-value.y) %>% 
-  dplyr::select(series_id,joined_series,date,spread) %>% 
-  unite(series_id,series_id,joined_series) %>% 
-  spread(series_id,spread)
-
-# Joined
-df_fit_recession6mos =
-  df_yieldcurve_predictors %>% 
-  inner_join(recession_next_six_months)
-
-# Split
-df.training = df_fit_recession6mos %>% filter(date<ymd("2018-01-01"))
-df.test = df_fit_recession6mos %>% filter(date>ymd("2018-01-01"))
-
-df.training.na_omit = na.omit( df_fit_recession6mos %>% filter(date<ymd("2018-01-01")) )
-df.test.na_omit = na.omit( df_fit_recession6mos %>% filter(date>ymd("2018-01-01")) )
-```
-
-
-```{r}
-# Control object
-trcontrol = caret::trainControl(method = "repeatedcv",
-                                number=5,
-                                repeats=3,
-                                summaryFunction = twoClassSummary,
-                                classProbs = TRUE,
-                                verboseIter=TRUE)
-```
-
-
-```{r}
-# RPART
-fit.rpart = caret::train(x = df.training.na_omit %>% dplyr::select(-Recession,-date),
-                         y = df.training.na_omit$Recession,
-                         metric="ROC",
-                         method="rpart",
-                         trControl=trcontrol,
-                         tuneLength=20)
-fit.rpart
-plot(as.party(fit.rpart$finalModel))
-```
-
-
-```{r }
-# GLM 
-fit.glm = glm(Recession~.,
-                  data = df_fit_recession6mos %>% dplyr::select(-date) %>% na.omit(),
-                  family="binomial")
-summary( fit.glm )
-```
-
-
-```{r }
-# RANDOM FOREST
-fit.rf = caret::train(x = df.training.na_omit %>% dplyr::select(-Recession,-date),
-                         y = df.training.na_omit$Recession,
-                         metric="ROC",
-                         ntree=100,
-                         method="rf",
-                         tuneGrid=data.frame(mtry=c(1,2,5)),
-                         trControl=trcontrol)
-fit.rf
-varImp(fit.rf)
-```
-
-
-```{r }
-# RANDOM FOREST
-fit.xgBoost = caret::train(x = df.training.na_omit %>% dplyr::select(-Recession,-date),
-                         y = df.training.na_omit$Recession,
-                         metric="ROC",
-                         method="xgbTree",
-                         # tuneGrid=data.frame(mtry=c(1,2,5)),
-                         trControl=trcontrol)
-fit.xgBoost
-varImp(fit.rf)
-```
-
-```{r}
-# Validate
-pred_rpart = predict(fit.rpart,df.test,type = "prob")[,2]
-pred_glm = predict(fit.glm,df.test,type = "response")
-pred_rf = predict(fit.rf,df.test,type = "prob")[,2]
-pred_xgbtree = predict(fit.xgBoost,df.test,type = "prob")[,2]
-
-roc_rpart = pROC::roc(predictor = pred_rpart,response = df.test$Recession)
-roc_glm = pROC::roc(predictor = pred_glm,response = df.test$Recession)
-roc_rf = pROC::roc(predictor = pred_rf,response = df.test$Recession)
-roc_xgbtree = pROC::roc(predictor = pred_xgbtree,response = df.test$Recession)
-```
-
-
-```{r}
-plot(roc_xgbtree)
-```
-
-```{r}
-plot(roc_glm)
-```
-
-
-```{r}
-cicoords_glm = ci.coords(roc_glm,x="best",best.method="youden",best.policy="random")
-cicoords_cutoff = cicoords_glm$threshold[2]
-```
-
-## Extrapolate
-
-```{r}
-
-df.extrapolate = df.test
-# df.extrapolate$risk = predict(fit.xgBoost,df.extrapolate,type = "prob") %>% pull(Yes) 
-df.extrapolate$risk = predict(fit.glm,df.extrapolate,type = "response") %>% pull(Yes) 
-df.extrapolate$risk_rf = predict(fit.rf,df.extrapolate,type = "prob") %>% pull(Yes) 
-
-ggplot(df.extrapolate,aes(x=date,y=risk)) +
-  geom_line() +
-  scale_y_continuous(labels=scales::percent) +
-  geom_hline(yintercept = cicoords_cutoff,linetype=2)
-```
-
-
-## Backtest
-
-```{r}
-
-df.backtest = df.training %>% 
-  dplyr::mutate(type="Training") %>% 
-  bind_rows(df.test) %>% 
-  dplyr::mutate(type=tidyr::replace_na(type,"Test"))
-df.backtest$risk = predict(fit.xgBoost,df.backtest,type = "prob") %>% pull(Yes) 
-
-ggplot(df.backtest,aes(x=date,y=risk)) +
-  geom_line(aes(color=type)) +
-  scale_y_continuous(labels=scales::percent,limits=c(0,0.02)) +
-  scale_x_date(date_breaks = "3 years",date_labels = "%Y",limits=c(ymd("1980-01-01",NA))) +
-  geom_hline(yintercept = cicoords_cutoff,linetype=2) +
-  theme_bw() +
-  theme(legend.position="bottom")
-
-```
-
-
 
