--- a/vignettes/1_Interest_Rates.Rmd
+++ b/vignettes/1_Interest_Rates.Rmd
@@ -771,19 +771,19 @@ rate_probs = do.call("rbind",lapply(seq(2,length(cols_to_loop)),function(cols_) 
     bind_rows( df_dff_bind )
 }))
 
-meetings_with_highest_rate = rate_probs %>% 
+meetings_with_lowest_rate = rate_probs %>% 
     filter(Val>0) %>% 
     filter(!is.na(Val)) %>% 
     arrange(Date) %>% 
     group_by(Date) %>% 
-    dplyr::filter(Rate==max(Rate,na.rm=T)) %>% 
+    dplyr::filter(Rate==min(Rate,na.rm=T)) %>% 
     filter(Val==max(Val,na.rm=T)) %>% 
     ungroup() %>% 
     dplyr::select(Date,Meeting) #%>% 
     # dplyr::mutate(Rate=factor(Rate))
 
 rate_probs %>% 
-  inner_join( meetings_with_highest_rate ) %>% 
+  inner_join( meetings_with_lowest_rate ) %>% 
   arrange(Date) %>% 
   filter(Val>0) %>% 
   dplyr::mutate(Rate=factor(Rate)) %>% 
@@ -1269,6 +1269,14 @@ fomc_dates = data.frame(date_fomc=c(ymd("2022-06-15"),
                             ymd("2023-09-20"),
                             ymd("2023-11-01"),
                             ymd("2023-12-13"),
+                            ymd("2024-01-31"),
+                            ymd("2024-03-20"),
+                            ymd("2024-05-01"),
+                            ymd("2024-06-19"),
+                            ymd("2024-07-31"),
+                            ymd("2024-09-25"),
+                            ymd("2024-11-06"),
+                            ymd("2024-12-18"),
                             Sys.Date())) %>% 
   filter(date_fomc>=Sys.Date())
 
@@ -1668,7 +1676,7 @@ fit_CSUSHPINSA = caret::train(x = df_predict_CSUSHPINSA %>%
 
 ## Predicted US Yield
 
-```{r fig.width=15,fig.height=15}
+```{r }
 
 df_predict_DFF %>% 
   dplyr::mutate(pred_DFF=predict(fit_DFF,.)) %>% 
@@ -1683,14 +1691,14 @@ df_predict_DFF %>%
   dplyr::mutate(date=as.Date(date,origin="1970-01-01")) %>%
   filter(!one_year) %>% 
   ggplot(.,aes(x=date,y=val,color=pred)) +
-  geom_line(size=1) +
+  geom_line(size=0.25) +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
   scale_y_continuous(breaks = seq(0,10,0.5)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   geom_hline(yintercept = 0,linetype=2) +
   # facet_wrap(~one_year,scales="free",ncol=1) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed T-Bond Yields",
        x=NULL,
        y="(%)",
@@ -1700,7 +1708,7 @@ df_predict_DFF %>%
 
 ```
 
-```{r fig.width=15,fig.height=15}
+```{r}
 
 df_predict_DFF %>% 
   dplyr::mutate(pred_DFF=predict(fit_DFF,.),
@@ -1719,14 +1727,14 @@ df_predict_DFF %>%
   filter(!one_year) %>% 
   filter(date>=ymd("2000-01-01")) %>% 
   ggplot(.,aes(x=date,y=val,color=pred)) +
-  geom_line(size=1) +
+  geom_line(size=0.25) +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
   scale_y_continuous(breaks = seq(0,10,0.5)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   geom_hline(yintercept = 0,linetype=2) +
   # facet_wrap(~one_year,scales="free",ncol=1) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed T-Bond Yields",
        x=NULL,
        y="(%)",
@@ -1735,7 +1743,7 @@ df_predict_DFF %>%
                 
 ```
 
-```{r fig.width=15,fig.height=15}
+```{r }
 
 df_predict_DFF %>% 
   dplyr::mutate(pred_DFF=predict(fit_DFF,.),
@@ -1754,14 +1762,14 @@ df_predict_DFF %>%
   filter(one_year) %>% 
   filter(date>=ymd("2000-01-01")) %>% 
   ggplot(.,aes(x=date,y=val,color=pred)) +
-  geom_line(size=1) +
+  geom_line(size=0.25) +
   scale_x_date(date_breaks = "1 month",date_labels = "%b") +
   scale_y_continuous(breaks = seq(0,10,0.5)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   geom_hline(yintercept = 0,linetype=2) +
   # facet_wrap(~one_year,scales="free",ncol=1) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed T-Bond Yields",
        x=NULL,
        y="(%)",
@@ -1770,7 +1778,7 @@ df_predict_DFF %>%
                 
 ```
 
-```{r fig.width=15,fig.height=15}
+```{r }
 
 df_predict_DFF %>% 
   dplyr::mutate(pred_spread=predict(fit_DGS10,.)-predict(fit_DGS2,.)) %>% 
@@ -1785,14 +1793,14 @@ df_predict_DFF %>%
   filter(one_year) %>% 
   filter(date>=ymd("2000-01-01")) %>% 
   ggplot(.,aes(x=date,y=val,color=pred)) +
-  geom_line(size=1) +
+  geom_line(size=0.25) +
   scale_x_date(date_breaks = "1 month",date_labels = "%b") +
   scale_y_continuous(breaks = seq(-10,10,0.5)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   geom_hline(yintercept = 0,linetype=2) +
   # facet_wrap(~one_year,scales="free",ncol=1) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed Spread 2-10 T-Bond Yields",
        x=NULL,
        y="(%)",
@@ -1833,7 +1841,7 @@ df_predict_DFF %>%
 
 ## Future FED FOMC Meeting Rate changes
 
-```{r fig.width=15,fig.height=15}
+```{r }
 
 df_predict_DFF %>% 
   dplyr::mutate(pred_DFF=predict(fit_DFF,.),
@@ -1853,11 +1861,11 @@ df_predict_DFF %>%
   dplyr::mutate(val=ceiling(val/0.25)*0.25/100) %>% 
   ggplot(.,aes(x=date_fomc,y=val)) +
   geom_point(size=3) + 
-  geom_line(size=1) +
+  geom_line(size=0.25) +
   scale_y_continuous(breaks = seq(0,0.1,by=0.0025),labels = scales::percent,limits = c(0,NA)) +
   scale_x_date(date_breaks = "1 month",date_labels = "%b") +
   geom_vline(data=fomc_dates,aes(xintercept=date_fomc),linetype=2) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted FOMC Meeting Rates",
        x=NULL,
        y="(%)",
@@ -1925,7 +1933,7 @@ fit_DFF_previous %>%
 
 ## Danish Short and Long
 
-```{r fig.width=15,fig.height=15}
+```{r }
 
 df_predict_DK_Short %>% 
   # filter(date>=Sys.Date()-years(2)) %>% 
@@ -1966,7 +1974,7 @@ df_predict_DK_Short %>%
   theme(axis.text.x=element_text(angle=45,hjust=1))  +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   geom_hline(yintercept = 0,linetype=2) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed Long and Short Interest Rate",
        x=NULL,
        y="(%)",
@@ -1974,7 +1982,7 @@ df_predict_DK_Short %>%
 
 ```
 
-```{r fig.width=15,fig.height=15}
+```{r }
 
 df_predict_DK_Short %>% 
   # filter(date>=Sys.Date()-years(2)) %>% 
@@ -2014,7 +2022,7 @@ df_predict_DK_Short %>%
   theme(axis.text.x=element_text(angle=45,hjust=1))  +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   geom_hline(yintercept = 0,linetype=2) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed Long and Short Interest Rate",
        x=NULL,
        y="(%)",
@@ -2024,10 +2032,10 @@ df_predict_DK_Short %>%
 
 ## Inflation Expectations
 
-```{r fig.width=15,fig.height=15}
+```{r }
 
 df_predict_CPIAUCSL %>% 
-  dplyr::mutate(pred_CPIAUCSL=predict(fit_CPIAUCSL,.)) %>% 
+    dplyr::mutate(pred_CPIAUCSL=predict(fit_CPIAUCSL,.)) %>% 
   dplyr::select(date,pred_CPIAUCSL,value) %>% 
   dplyr::mutate(date=date+years(1)) %>%
   gather(pred,val,pred_CPIAUCSL:value) %>%
@@ -2040,13 +2048,14 @@ df_predict_CPIAUCSL %>%
   ggplot(.,aes(x=date,y=val,color=pred)) +
   geom_line(size=1) +
   scale_x_date(date_breaks = "1 month",date_labels = "%b") +
-  scale_y_continuous(breaks = seq(0,10,0.25)) +
+  scale_y_continuous(breaks = seq(0,10,0.5),limits=c(0,NA)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
   add_fomc_meeting_dates() +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
+  geom_hline(yintercept = 2,linetype=2) +
   # geom_hline(yintercept = 0,linetype=2) +
   # facet_wrap(~one_year,scales="free",ncol=1) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed YoY Inflation",
        x=NULL,
        y="(%)",
@@ -2056,7 +2065,7 @@ df_predict_CPIAUCSL %>%
 
 ## Case-Shiller
 
-```{r fig.width=15,fig.height=15}
+```{r }
 
 df_predict_CSUSHPINSA %>% 
   dplyr::mutate(pred_CSUSHPINSA=predict(fit_CSUSHPINSA,.)) %>% 
@@ -2070,7 +2079,7 @@ df_predict_CSUSHPINSA %>%
   dplyr::mutate(date=as.Date(date,origin="1970-01-01")) %>%
   filter(one_year) %>% 
   ggplot(.,aes(x=date,y=val,color=pred)) +
-  geom_line(size=1) +
+  geom_line(size=0.25) +
   scale_x_date(date_breaks = "1 month",date_labels = "%b") +
   # scale_y_continuous(breaks = seq(0,10,0.25)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
@@ -2078,7 +2087,7 @@ df_predict_CSUSHPINSA %>%
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   # geom_hline(yintercept = 0,linetype=2) +
   # facet_wrap(~one_year,scales="free",ncol=1) +
-  theme_money_printer_go_brrr(base_size=20) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed Case-Shiller",
        x=NULL,
        y="(%)",
